@@ -33,6 +33,7 @@ import org.apache.catalina.core.StandardWrapper;
 import org.apache.catalina.loader.WebappLoader;
 import org.red5.server.api.IServer;
 import org.red5.server.tomcat.TomcatLoader;
+import org.red5.server.util.FileUtil;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -102,7 +103,7 @@ public class TomcatRTMPTLoader extends TomcatLoader {
 		
 		// create and add root context
 		File appDirBase = new File(webappFolder);
-		String webappContextDir = formatPath(appDirBase.getAbsolutePath(), "/root");
+		String webappContextDir = FileUtil.formatPath(appDirBase.getAbsolutePath(), "/root");
 		Context ctx = embedded.createContext("/", webappContextDir);
 		ctx.setReloadable(false);
 		log.debug("Context name: {}", ctx.getName());
